--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "postgres": "^3.4.3"
   },
   "devDependencies": {
+    "@types/csv-parse": "^1.1.12",
     "@types/node": "^20.11.0",
+    "csv-parse": "^6.1.0",
     "drizzle-kit": "^0.24.0",
+    "esbuild": "^0.25.12",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
